traffic-splitting/vs-0.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: whereami-backend
  namespace: backend
spec:
  hosts:
    - whereami-backend
  http:
  - route:
    - destination:
        host: whereami-backend
        subset: v1
      weight: 100
    - destination:
        host: whereami-backend
        subset: v2
      weight: 0
