traffic-splitting/vs-100.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: whereami-backend
  namespace: backend
spec:
  hosts:
    - whereami-backend.backend.svc.cluster.local
  http:
  - route:
    - destination:
        host: whereami-backend
        subset: v1
      weight: 0
    - destination:
        host: whereami-backend
        subset: v2
      weight: 100
